# eventscore

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: publishing.yml  testing.yml
docs/: conf.py  index.rst  installation.rst  requirements.txt  usage.rst
docs/api/: core.rst  decorators.rst  ext.rst  index.rst  shortcuts.rst
docs/api/core/: abstract.rst  consumers.rst  ecore.rst  exceptions.rst  logging.rst  pipelines.rst  pkg.rst  producers.rst  runners.rst  serializers.rst  streams.rst  types.rst  workers.rst
docs/api/ext/: redis.rst
docs/api/ext/redis/: serializers.rst  streams.rst
docs/source/: eventscore.core.rst  eventscore.ext.kafka.rst  eventscore.ext.redis.rst  eventscore.ext.rst  eventscore.rst  modules.rst
eventscore/: decorators.py
eventscore/core/: abstract.py  consumers.py  ecore.py  events.py  exceptions.py  logging.py  observers.py  pipelines.py  producers.py  runners.py  serializers.py  types.py  workers.py
eventscore/ext/kafka/: serializers.py  streams.py
eventscore/ext/redis/: serializers.py  streams.py
examples/: .gitignore
examples/django/docker/: docker-compose.yml
examples/django/src/: pyproject.toml
examples/django/src/config/: ecore.py  settings.py  urls.py
examples/django/src/ping/: urls.py  views.py
examples/django/src/pong/: consumers.py
examples/fastapi/docker/: docker-compose.yml
examples/fastapi/docker/asgi/: Dockerfile  entrypoint.sh  entrypoint.uvicorn.local.sh  entrypoint.uvicorn.sh
examples/fastapi/nginx/: nginx.conf
examples/fastapi/src/: main.py  pyproject.toml
examples/fastapi/src/config/: app.py  ecore.py
examples/fastapi/src/consumers/: pong.py
examples/fastapi/src/endpoints/: __init__.py  ping.py
examples/marketplace/docker/: docker-compose.yml
examples/marketplace/docker/wsgi/: Dockerfile  entrypoint.gunicorn.sh  entrypoint.runserver.sh
examples/marketplace/nginx/: nginx.conf
examples/marketplace/src/: pyproject.toml
examples/marketplace/src/analytics/: apps.py  consumers.py
examples/marketplace/src/config/: di.py  ecore.py  settings.py  urls.py
examples/marketplace/src/notifications/: apps.py  consumers.py
examples/marketplace/src/payments/: apps.py  consumers.py  urls.py  views.py
examples/marketplace/src/products/: apps.py  consumers.py  urls.py  views.py
tests/: conftest.py
tests/e2e/: conftest.py  test_django.py
tests/e2e/django/docker/: docker-compose.yml
tests/e2e/django/docker/wsgi/: entrypoint.gunicorn.sh  entrypoint.runserver.sh
tests/e2e/django/src/: pyproject.toml
tests/e2e/django/src/config/: ecore.py  settings.py
tests/e2e/django/src/events/: models.py
tests/e2e/django/src/events/migrations/: 0001_initial.py
tests/e2e/django/src/eventscore/core/: consumers.py  ecore.py  producers.py
tests/e2e/django/src/ping/: urls.py  views.py
tests/e2e/django/src/pong/: consumers.py
tests/integration/: conftest.py  test_ecore.py  test_runners.py  test_streams.py  test_workers.py
tests/integration/discoverable/: __init__.py  single.py
tests/integration/discoverable/multiple/: group2.py
tests/integration/discoverable/notapackage/: group1.py
tests/integration/redis/: docker-compose.yml
tests/unit/: conftest.py  test_consumers.py  test_decorators.py  test_ecore.py  test_pipelines.py  test_producers.py  test_runners.py  test_serializers.py  test_streams.py  test_types.py  test_workers.py
