[project]
name = "django-example"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<1.0.0)",
    "redis (>=5.2.1,<6.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
